--- a/oncoFinder2/templates/website/lrl_report.html
+++ b/oncoFinder2/templates/website/lrl_report.html
@@ -747,7 +747,7 @@ A biogenic amine with antioxidant activity.
   <li>Retinoic acid upregulated TGF-beta pathway after 24 hours of incubation, but showed strong downregulation of TGF-beta pathway after 48 hours of incubation.</li>
   <li>Metformin showed strong upregulation of WNT signaling pathway and upregulation of TGF-beta signaling pathway. These pathways are usually down-regulated in aged skin.</li>
   <li>Capryloyl salicylic acid demonstrated beneficial actions on skin (strong suppression of inflammation) only after 48 hours of incubation.</li>
-  <li>Capryloyl salicylic acid activated TGF-beta pathway that causes the reduction of skin collagen.</li>
+  <li>Capryloyl salicylic acid downregulated TGF-beta pathway that causes the reduction of skin collagen.</li>
   <li>Metformin demonstrated anti-aging action on skin younger than 50 y/o on a pathway level. </li>
   <li>Capryloyl salicylic acid demonstrated anti-aging action on 50+ y/o skin on a pathway level and seemed to be a better anti-aging treatment than other salicylates, resveratrol and retinoic acid.</li>
   <li>Resveratrol demonstrated anti-aging action on 50+ y/o skin on a pathway level.</li>
