--- a/oncoFinder2/templates/website/gp_report.html
+++ b/oncoFinder2/templates/website/gp_report.html
@@ -231,7 +231,90 @@
   
   </div> <!-- end of path tab-content -->
  
+<h3>Aging Related Pathways</h3>
+<hr/>
 
+<!-- PAthway Nav tabs -->
+         <ul class="nav nav-tabs" role="tablist">
+         <li role="presentation" class="active"><a href="#age_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
+          <li role="presentation" ><a href="#MCF7_age_tab" aria-controls="settings" role="tab" data-toggle="tab">MCF7</a></li>
+          <!--<li role="presentation" ><a href="#ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
+         <li role="presentation"><a href="#ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
+         <li role="presentation"><a href="#ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
+        -->
+        </ul>
+         
+         <!-- PATHWAY Tab panes -->
+  <div class="tab-content">
+  
+  
+  <div role="tabpanel" class="tab-pane fade in active " id="age_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="venn_age-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Upregulated pathways
+       </td>
+       <td>
+       <div id="venn_age-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Downregulated pathways
+       </td>
+      </tr>
+    </table>        
+   <br/>
+  <div id="venn_age_dinamic" class="" style="max-width:1000px;">
+  
+  <h4>Table 1. Age pathways</h4>
+    <table id="tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway</th>
+           <th>N-acetylcysteine</th>
+           <th>Myricetin</th>
+           <th>Epigallocatechin gallate</th>
+          </tr>
+        </thead>  
+      </table>    
+  
+  
+  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  
+  <div role="tabpanel" class="tab-pane fade  " id="MCF7_age_tab">     <br/> 
+    <table style='text-align:center;'>
+      <tr>
+       <td>
+       <div id="MCF7_venn_age-up" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Upregulated pathways
+       </td>
+       <td>
+       <div id="MCF7_venn_age-down" style="min-width: 450px; height: 400px; max-width: 450px; margin: 0 auto">Loading diagram...</div> 
+       Downregulated pathways
+       </td>
+      </tr>
+    </table>        
+   <br/>
+  <div id="MCF7_venn_age_dinamic" class="" style="max-width:1000px;">
+  
+  <h4>Table 2. Aging pathways</h4>
+    <table id="MCF7_tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
+        <thead>
+          <tr>
+           <th>Pathway</th>
+           <th>N-acetylcysteine</th>
+           <th>Myricetin</th>
+           <th>Epigallocatechin gallate</th>
+          </tr>
+        </thead>  
+      </table>    
+  
+  
+  </div> <!--  div to place dinamic tables from Venn clicks -->
+  </div>
+  
+  
+  </div> <!-- end of path tab-content -->
 
 
 </div>  
