--- a/oncoFinder2/templates/website/gp_report.html
+++ b/oncoFinder2/templates/website/gp_report.html
@@ -67,8 +67,8 @@
 
 <!-- PAthway Nav tabs -->
          <ul class="nav nav-tabs" role="tablist">
-         <li role="presentation" class="active"><a href="#path_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
-          <li role="presentation" ><a href="#MCF7_tab" aria-controls="settings" role="tab" data-toggle="tab">MCF7</a></li>
+         <!--  <li role="presentation" class="active"><a href="#path_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
+          --><li role="presentation" class="active"><a href="#MCF7_tab" aria-controls="settings" role="tab" data-toggle="tab">Aggregated</a></li>
           <!--<li role="presentation" ><a href="#ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
          <li role="presentation"><a href="#ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
          <li role="presentation"><a href="#ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
@@ -79,7 +79,7 @@
   <div class="tab-content">
   
   
-  <div role="tabpanel" class="tab-pane fade in active " id="path_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade  " id="path_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -112,7 +112,7 @@
   </div>
   
   
-  <div role="tabpanel" class="tab-pane fade  " id="MCF7_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade in active " id="MCF7_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -128,7 +128,7 @@
    <br/>
   <div id="MCF7_venn_path_dinamic" class="" style="max-width:1000px;">
   
-  <h4>Table 2. Signaling pathways</h4>
+  <h4>Table 1. Signaling pathways</h4>
     <table id="MCF7_tbl-path_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -153,8 +153,8 @@
 <hr/>
 <!-- Metabolic Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
-         <li role="presentation" class="active"><a href="#meta_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
-          <li role="presentation" ><a href="#meta_MCF7_tab" aria-controls="settings" role="tab" data-toggle="tab">MCF7</a></li>
+         <!--  <li role="presentation" class="active"><a href="#meta_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
+          --><li role="presentation" class="active"><a href="#meta_MCF7_tab" aria-controls="settings" role="tab" data-toggle="tab">Aggregated</a></li>
          <!-- <li role="presentation" ><a href="#ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
          <li role="presentation"><a href="#ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
          <li role="presentation"><a href="#ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
@@ -165,7 +165,7 @@
   <div class="tab-content">
   
   
-  <div role="tabpanel" class="tab-pane fade in active " id="meta_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade  " id="meta_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -197,7 +197,7 @@
   </div> <!--  div to place dinamic tables from Venn clicks -->
   </div>
   
-  <div role="tabpanel" class="tab-pane fade " id="meta_MCF7_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade in active " id="meta_MCF7_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -213,7 +213,7 @@
    <br/>
   <div id="MCF7_venn_meta_dinamic" class="" style="max-width:1000px;">
   
-  <h4>Table 4. Metabolic pathways</h4>
+  <h4>Table 2. Metabolic pathways</h4>
     <table id="meta_MCF7_tbl-path_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -236,8 +236,8 @@
 
 <!-- PAthway Nav tabs -->
          <ul class="nav nav-tabs" role="tablist">
-         <li role="presentation" class="active"><a href="#age_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
-          <li role="presentation" ><a href="#MCF7_age_tab" aria-controls="settings" role="tab" data-toggle="tab">MCF7</a></li>
+         <!--  <li role="presentation" class="active"><a href="#age_tab" aria-controls="settings" role="tab" data-toggle="tab">PC3</a></li>
+          --><li role="presentation" class="active"><a href="#MCF7_age_tab" aria-controls="settings" role="tab" data-toggle="tab">Aggregated</a></li>
           <!--<li role="presentation" ><a href="#ESvsANCvsCCL_tab" aria-controls="home" role="tab" data-toggle="tab">ESvsANCvsCCL</a></li>
          <li role="presentation"><a href="#ESvsAECvsCCL_tab" aria-controls="profile" role="tab" data-toggle="tab">ESvsAECvsCCL</a></li>
          <li role="presentation"><a href="#ESvsABCvsCCL_tab" aria-controls="messages" role="tab" data-toggle="tab">ESvsABCvsCCL</a></li>
@@ -248,7 +248,7 @@
   <div class="tab-content">
   
   
-  <div role="tabpanel" class="tab-pane fade in active " id="age_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade " id="age_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -264,7 +264,7 @@
    <br/>
   <div id="venn_age_dinamic" class="" style="max-width:1000px;">
   
-  <h4>Table 1. Age pathways</h4>
+  <h4>Table 3. Aging pathways</h4>
     <table id="tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
@@ -281,7 +281,7 @@
   </div>
   
   
-  <div role="tabpanel" class="tab-pane fade  " id="MCF7_age_tab">     <br/> 
+  <div role="tabpanel" class="tab-pane fade in active   " id="MCF7_age_tab">     <br/> 
     <table style='text-align:center;'>
       <tr>
        <td>
@@ -297,7 +297,7 @@
    <br/>
   <div id="MCF7_venn_age_dinamic" class="" style="max-width:1000px;">
   
-  <h4>Table 2. Aging pathways</h4>
+  <h4>Table 3. Aging pathways</h4>
     <table id="MCF7_tbl-age_all" class="path table table-striped table-bordered" cellspacing="0" width="100%">
         <thead>
           <tr>
