--- a/oncoFinder2/templates/website/gp_report.html
+++ b/oncoFinder2/templates/website/gp_report.html
@@ -62,7 +62,7 @@
  <hr/> 
 <h2 id='path_analysis'>Pathway Analysis</h2>
 <hr/>
-<h3>Signaling Pathways</h3>
+<h3 id='path_path'>Signaling Pathways</h3>
 <hr/>
 
 <!-- PAthway Nav tabs -->
@@ -149,7 +149,7 @@
 
 
 <!-- ---------------------------- METABOLIC------------------------ -->
-<h3>Metabolic Pathways</h3>
+<h3 id='meta_path'>Metabolic Pathways</h3>
 <hr/>
 <!-- Metabolic Nav tabs -->
                 <ul class="nav nav-tabs" role="tablist">
@@ -231,7 +231,7 @@
   
   </div> <!-- end of path tab-content -->
  
-<h3>Aging Related Pathways</h3>
+<h3 id='age_path'>Aging Related Pathways</h3>
 <hr/>
 
 <!-- PAthway Nav tabs -->
@@ -336,11 +336,10 @@
         <div class="menu">
           <ul class="list-unstyled" >
             <li class="title">Table of contents: </li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#input_data">Input data</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#methods">Methods</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#gene_analysis">Gene level analysis</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_analysis">Pathway analysis</a></li>
-            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#references">References</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#path_path">Signaling Pathways</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#meta_path">Metabolic Pathways</a></li>
+            <li>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#age_path">Aging Related Pathways</a></li>
+            
           </ul>
         </div>
         <div class="bottom">
